# synthizer3d

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  changes.md  correzioni_audio.txt  debug_script.py  generate-cython.sh  log.txt  problemi.txt  setup.py  sound.py  synthizerlog.txt  test.py  vcpkg.json  vendor.py
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: ci.yaml  linux.yaml
_skbuild/win-amd64-3.13/cmake-build/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  install_manifest.txt
ci/: build_python.ps1
examples/: angular_panned_source.py  automation_circle.py  automation_fadeout.py  basic_stream_handle.py  buffer_from_memory.py  buffer_from_raw_data.py  custom_stream.py  echo.py  fast_sine_bank.py  fdn_reverb.py  load_libsndfile.py  media_player.py  noise.py  scalar_panned_source.py  stream_from_memory.py
include/synthizer/decoders/: ogg.cpp  opus.cpp
manual/src/: SUMMARY.md  introduction.md  python.md
manual/src/appendices/: audio_eq_cookbook.md
manual/src/concepts/: audio_in.md  automation.md  events.md  gain.md  initialization.md  introduction.md  libsndfile.md
manual/src/object_reference/: buffer.md  context.md  global_echo.md  global_effect.md  panned_sources.md
manual/src/tutorials/: basics.md  events.md  filters.md  installation.md  introduction.md  linger.md
synthizer/: synthizer.cpp  synthizer.pyx  synthizer_constants.pxd
synthizer-c/: CMakeLists.txt  CONTRIBUTING.md  README.md  changes.md  deploy-docs.sh  format.sh
synthizer-c/ci/: build_c.ps1  build_linux.sh
synthizer-c/data_processor/: README.md  array_writer.py  hrtf_writer.py  main.py  minimum_phase.py  mit.py  paths.py
synthizer-c/include/: synthizer_constants.h
synthizer-c/include/synthizer/: decoding.hpp  property_xmacros.hpp
synthizer-c/include/synthizer/decoders/: aac.cpp  aac.hpp  aif.hpp  mp3.hpp  ogg.cpp  ogg.hpp  opus.cpp
synthizer-c/include/synthizer/generators/: buffer.hpp
synthizer-c/manual/: book.toml
synthizer-c/manual/src/concepts/: 3d_audio.md  c_api.md  channel_mixing.md  context.md  conventions.md  custom_streams.md  decoding.md  effects.md  filters.md  filters_and_effects.md  generators.md  handles.md  lingering.md  object_model.md  pausing.md  properties.md  sources.md  stability.md
synthizer-c/manual/src/object_reference/: buffer_generator.md  direct_source.md  fast_sine_bank.md  generator.md  global_fdn_reverb.md  noise_generator.md  source.md  source_3d.md  streaming_generator.md
synthizer-c/src/: decoding.cpp
synthizer-c/src/data/: hrtf.cpp
synthizer-vendored/: CMakeLists.txt
synthizer-vendored/include/synthizer/decoders/: aac.cpp  aac.cpp.bac  aac.hpp  opus.hpp
synthizer-vendored/src/: decoding.cpp
synthizer3d.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
